--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  get: ^4.6.6
+  curved_navigation_bar: ^1.0.3
+  curved_navigation_bar_with_label: ^2.1.4
 
 dev_dependencies:
   flutter_test:
