--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.6.6
   curved_navigation_bar: ^1.0.3
+  google_fonts: ^6.2.0
   
 
 dev_dependencies:
