--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   google_fonts: ^6.2.0
   shared_preferences: ^2.2.3
+  firebase_core: ^2.31.0
+  firebase_auth: ^4.19.5
+  firebase_storage: ^11.7.5
 
   
 
