--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   firebase_storage: ^11.7.5
   cloud_firestore: ^4.17.3
   table_calendar: ^3.1.1
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
 
   
 
